--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -1,27 +1,45 @@
+* {
+  box-sizing: border-box;
+}
+
 ul {
+  position: static;
+  display: inline;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
   background-color: white;
-}
-
-li {
+  display: inline;
 }
 
 li a {
   display: block;
-  color: gray;
+  color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 1%;
   text-decoration: none;
   float: right;
+  font-size: 13px;
 }
 
 li a:hover:not(.active) {
-  color: black;
+  color: gray;
 }
 
 .logo {
-  width: 15%;
+  width: 12%;
+  display: inline;
+  margin: 1% 12%;
+  position: absolute;
+}
+
+#login {
+  margin-right: 20%;
+  background-color: lightblue;
+  opacity: 0.5;
+  border-radius: 3px;
+  padding: 1% 2%;
+  font-weight: bold;
+  color: darkblue;
 }
