--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,11 +1,173 @@
+* {
+  box-sizing: border-box;
+}
+
+.banner {
+  width: 100vw;
+  overflow: hidden;
+  height: 60vh;
+  position: relative;
+}
+
+.banner-info {
+  z-index: 2;
+  position: absolute;
+  top: 25%;
+  left: 15%;
+  width: 30%;
+  color: white;
+}
+
+.gradient {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0) 70%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+  z-index: 2;
+}
+
 .banner-img {
-  height: 100px;
+  height: 120vh;
+  width: 110vw;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.container1 {
+  display: flex;
+  justify-content: center;
+  height: 60vh;
+}
+
+.flex-item {
+  height: 100%;
+  width: 36vw;
+  color: gray;
+}
+
+.flex-title {
+  margin-top: 10%;
+}
+
+.flex-para {
+  font-size: 13px;
+}
+
+.flex-list {
+  margin-left: -20px;
+  margin-top: 5%;
+  margin-bottom: 7%;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.home-li {
+  padding-top: 2%;
 }
 
 .office-img {
-  height: 100px;
+  margin-top: 10%;
+  width: 95%;
+  height: auto;
+  z-index: 3;
+}
+
+.container2 {
+  width: 100vw;
+  overflow: hidden;
+  height: 60vh;
+  position: relative;
+}
+
+.container2-info {
+  z-index: 2;
+  position: absolute;
+  top: 15%;
+  left: 14%;
+  border-radius: 3px;
+  width: 30%;
+  color: white;
+  background-color: black;
+  opacity: 0.5;
+  padding: 2%;
+  width: 40vw;
 }
 
 .woman-img {
   height: 100px;
+}
+
+.container3 {
+  height: 60vh;
+}
+
+.container3-titles {
+  text-align: center;
+  color: gray;
+}
+
+.container3-titles h3 {
+  margin-top: 4%;
+  margin-bottom: -1%;
+}
+
+.container3-paras {
+  column-count: 3;
+  width: 70vw;
+  margin: auto;
+  margin-bottom: 2%;
+  color: gray;
+  font-size: 13px;
+}
+
+.btn-1 {
+  text-decoration: none;
+  margin-right: 20%;
+  background-color: rgba(47, 144, 201, 0.8);
+  border-radius: 3px;
+  padding: 3% 5%;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+}
+
+.btn-2 {
+  text-decoration: none;
+  background-color: rgba(47, 144, 201, 0.8);
+  border-radius: 3px;
+  padding: 3% 5%;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+}
+
+.btn-3 {
+  text-decoration: none;
+  background-color: white;
+  border-radius: 3px;
+  padding: 3% 5%;
+  font-size: 10px;
+  font-weight: bold;
+  color: rgba(14, 89, 133, 0.8);
+}
+
+.btn-4 {
+  text-decoration: none;
+  background-color: rgba(47, 144, 201, 0.8);
+  border-radius: 3px;
+  padding: 1% 2%;
+  font-size: 10px;
+  font-weight: bold;
+  color: white;
+  margin-left: 45vw;
+  margin-top: 10vw;
 }
