--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -9,12 +9,13 @@
   padding: 0;
   overflow: hidden;
   background-color: white;
+  border-bottom: 0.5px solid lightgray;
 }
 
 .nav-li {
   color: black;
   text-align: center;
-  padding: 1%;
+  padding: 1.5% 1%;
   text-decoration: none;
   float: right;
   font-size: 13px;
@@ -33,7 +34,7 @@
 
 #login {
   margin-right: 20%;
-  margin-top: 0.5%;
+  margin-top: 1%;
   background-color: lightblue;
   opacity: 0.5;
   border-radius: 3px;
