--- a/src/stylesheets/ContactUs.css
+++ b/src/stylesheets/ContactUs.css
@@ -42,3 +42,15 @@
 .warning {
   color: red;
 }
+
+.confirmation-container {
+  background-color: rgb(201, 235, 137);
+  border-radius: 3px;
+  text-align: center;
+  padding: 10% 0;
+}
+
+.confirmation-logo {
+  font-size: xx-large;
+  color: rgb(37, 177, 37);
+}
