--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -19,27 +19,28 @@
 }
 
 .gradient {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(
+  background-image: linear-gradient(
     to left,
     rgba(0, 0, 0, 0) 70%,
     rgba(0, 0, 0, 0.8) 100%
   );
-  z-index: 2;
+  z-index: 1;
 }
 
 .banner-img {
-  height: 120vh;
-  width: 110vw;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
+  height: auto;
+  width: 100vw;
+  z-index: 0;
+  background-image: linear-gradient(
+    to left,
+    rgba(0, 0, 0, 0) 70%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
 }
 
 .container1 {
@@ -100,10 +101,6 @@
   opacity: 0.5;
   padding: 2%;
   width: 40vw;
-}
-
-.woman-img {
-  height: 100px;
 }
 
 .container3 {
@@ -170,4 +167,7 @@
   color: white;
   margin-left: 45vw;
   margin-top: 10vw;
+}
+
+@media only screen and (max-width: 600px) {
 }
