--- a/src/stylesheets/Navbar.css
+++ b/src/stylesheets/Navbar.css
@@ -42,3 +42,18 @@
   font-weight: bold;
   color: darkblue;
 }
+
+@media only screen and (max-width: 600px) {
+  .nav-li {
+    display: none;
+  }
+  .mobile-header {
+    background-color: white;
+    padding: 4%;
+  }
+  .logo {
+    width: 50%;
+    position: static;
+    margin-left: 25%;
+  }
+}
