--- a/src/stylesheets/AboutUs.css
+++ b/src/stylesheets/AboutUs.css
@@ -27,3 +27,15 @@
   margin-left: -2%;
   font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+  .about-us-container {
+    width: 90vw;
+  }
+  .about-us-container img {
+    width: 100%;
+  }
+  .about-us-container ul {
+    margin-left: -7%;
+  }
+}
