--- a/src/stylesheets/ContactUs.css
+++ b/src/stylesheets/ContactUs.css
@@ -14,6 +14,16 @@
   justify-content: space-between;
 }
 
+.flex-container-2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.flex-container-3 {
+  display: flex;
+  justify-content: space-between;
+}
+
 .input {
   width: 100%;
   padding: 12px 20px;
@@ -22,16 +32,17 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   background-color: rgb(245, 244, 244);
+  flex-grow: 1;
 }
 
 .inputs-4 {
-  width: 90%;
+  width: 98%;
 }
 
 .form-btn {
   width: 100%;
   text-decoration: none;
-  background-color: rgba(47, 144, 201, 0.8);
+  background-color: rgba(47, 144, 201);
   border-radius: 3px;
   padding: 2.5% 5%;
   font-size: 10px;
@@ -53,4 +64,21 @@
 .confirmation-logo {
   font-size: xx-large;
   color: rgb(37, 177, 37);
+}
+
+@media only screen and (max-width: 600px) {
+  .contact-us {
+    background-image: none !important;
+  }
+  .contact-us-container {
+    height: 100vh;
+    width: 90vw;
+    margin: auto;
+  }
+  .flex-container {
+    flex-direction: column;
+  }
+  .flex-container-2 {
+    flex-direction: column;
+  }
 }
