--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -129,7 +129,7 @@
 .btn-1 {
   text-decoration: none;
   margin-right: 20%;
-  background-color: rgba(47, 144, 201, 0.8);
+  background-color: rgba(47, 144, 201);
   border-radius: 3px;
   padding: 3% 5%;
   font-size: 10px;
@@ -139,7 +139,7 @@
 
 .btn-2 {
   text-decoration: none;
-  background-color: rgba(47, 144, 201, 0.8);
+  background-color: rgba(47, 144, 201);
   border-radius: 3px;
   padding: 3% 5%;
   font-size: 10px;
@@ -154,12 +154,12 @@
   padding: 3% 5%;
   font-size: 10px;
   font-weight: bold;
-  color: rgba(14, 89, 133, 0.8);
+  color: rgba(14, 89, 133);
 }
 
 .btn-4 {
   text-decoration: none;
-  background-color: rgba(47, 144, 201, 0.8);
+  background-color: rgba(47, 144, 201);
   border-radius: 3px;
   padding: 1% 2%;
   font-size: 10px;
