--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -36,11 +36,6 @@
   height: auto;
   width: 100vw;
   z-index: 0;
-  background-image: linear-gradient(
-    to left,
-    rgba(0, 0, 0, 0) 70%,
-    rgba(0, 0, 0, 0.8) 100%
-  );
 }
 
 .container1 {
@@ -49,7 +44,13 @@
   height: 60vh;
 }
 
-.flex-item {
+.flex-item-1 {
+  height: 100%;
+  width: 36vw;
+  color: gray;
+}
+
+.flex-item-2 {
   height: 100%;
   width: 36vw;
   color: gray;
@@ -97,14 +98,18 @@
   border-radius: 3px;
   width: 30%;
   color: white;
-  background-color: black;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 2%;
+  height: 70%;
   width: 40vw;
 }
 
+.container2-info p {
+  height: 40%;
+}
+
 .container3 {
-  height: 60vh;
+  height: 40vh;
 }
 
 .container3-titles {
@@ -177,7 +182,7 @@
   .banner-img {
     height: 60vh;
     width: auto;
-    margin-left: -20%;
+    margin-left: -40%;
   }
   .btn-1 {
     width: 100%;
@@ -186,16 +191,25 @@
     margin-right: 0;
   }
   .container1 {
-    height: 130vh;
+    height: 100vh;
     flex-direction: column-reverse;
     /* display: inline-block; */
     justify-content: start;
   }
-  .flex-item {
+  .flex-item-1 {
     height: 50%;
     width: 90vw;
     margin: auto;
+    /* margin-top: -10%; */
   }
+
+  .flex-item-2 {
+    height: 50%;
+    width: 90vw;
+    margin: auto;
+    /* margin-bottom: -20%; */
+  }
+
   .flex-title {
     margin-top: -25%;
   }
@@ -213,13 +227,16 @@
     left: 2.5%;
     top: 5%;
   }
+  .container2-info p {
+    height: 50%;
+  }
   .btn-3 {
     width: 100%;
     display: block;
     text-align: center;
   }
   .container3 {
-    height: 130vh;
+    height: 100vh;
   }
   .container3-titles {
     width: 90vw;
