--- a/src/stylesheets/ContactUs.css
+++ b/src/stylesheets/ContactUs.css
@@ -16,19 +16,12 @@
   font-size: 13px;
 }
 
-.flex-container {
-  display: flex;
-  justify-content: space-between;
+.two-input-container {
+  column-count: 2;
 }
 
-.flex-container-2 {
-  display: flex;
-  justify-content: space-between;
-}
-
-.flex-container-3 {
-  display: flex;
-  justify-content: space-between;
+.four-input-container {
+  column-count: 4;
 }
 
 .input {
@@ -40,10 +33,6 @@
   border-radius: 4px;
   background-color: rgb(245, 244, 244);
   flex-grow: 1;
-}
-
-.inputs-4 {
-  width: 98%;
 }
 
 .form-btn {
@@ -98,10 +87,10 @@
     width: 90vw;
     margin: auto;
   }
-  .flex-container {
-    flex-direction: column;
+  .two-input-container {
+    column-count: 1;
   }
-  .flex-container-2 {
-    flex-direction: column;
+  .four-input-container {
+    column-count: 1;
   }
 }
