--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -72,7 +72,7 @@
   font-size: 13px;
 }
 
-.flex-list {
+.flex-ul {
   margin-left: -20px;
   margin-top: 5%;
   margin-bottom: 7%;
@@ -156,20 +156,6 @@
 
 .btn-2 {
   text-decoration: none;
-  background-color: rgba(47, 144, 201);
-  border-radius: 3px;
-  padding: 3% 5%;
-  font-size: 10px;
-  font-weight: bold;
-  color: white;
-}
-
-.btn-2:hover {
-  background-color: rgb(116, 156, 216);
-}
-
-.btn-3 {
-  text-decoration: none;
   background-color: white;
   border-radius: 3px;
   padding: 3% 5%;
@@ -178,11 +164,11 @@
   color: rgba(14, 89, 133);
 }
 
-.btn-3:hover {
+.btn-2:hover {
   background-color: lightgray;
 }
 
-.btn-4 {
+.btn-3 {
   text-decoration: none;
   background-color: rgba(47, 144, 201);
   border-radius: 3px;
@@ -194,7 +180,7 @@
   margin-top: 10vw;
 }
 
-.btn-4:hover {
+.btn-3:hover {
   background-color: rgb(116, 156, 216);
 }
 
@@ -229,21 +215,18 @@
   .container1 {
     height: 100vh;
     flex-direction: column-reverse;
-    /* display: inline-block; */
     justify-content: start;
   }
   .flex-item-1 {
     height: 50%;
     width: 90vw;
     margin: auto;
-    /* margin-top: -10%; */
   }
 
   .flex-item-2 {
     height: 50%;
     width: 90vw;
     margin: auto;
-    /* margin-bottom: -20%; */
   }
 
   .flex-title {
@@ -252,11 +235,7 @@
   .office-img {
     margin-bottom: -10%;
   }
-  .btn-2 {
-    width: 100%;
-    display: block;
-    text-align: center;
-  }
+
   .container2-info {
     height: 90%;
     width: 95vw;
@@ -266,7 +245,7 @@
   .container2-info p {
     height: 50%;
   }
-  .btn-3 {
+  .btn-2 {
     width: 100%;
     display: block;
     text-align: center;
@@ -281,7 +260,7 @@
     column-count: 1;
     width: 90vw;
   }
-  .btn-4 {
+  .btn-3 {
     width: 90vw;
     display: block;
     text-align: center;
