chore: clean up imports, remove unnecessary code and add greyed out text to form

--- a/src/stylesheets/ContactUs.css
+++ b/src/stylesheets/ContactUs.css
@@ -19,6 +19,15 @@
   column-count: 2;
 }
 
+.greyed-out {
+  color: lightgray;
+}
+
+.msg-label {
+  float: right;
+  color: lightgray;
+}
+
 textarea {
   resize: none;
 }
